# pilot

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
config/: pilot.json
docker/: Dockerfile.arm64  Dockerfile.cross  toolchain-aarch64.cmake
frontend/: index.html
include/config/: config_loader.h
include/control/: vehicle_controller.h  vehicle_profile.h
include/db/: pg_client.h
include/engine/: condition_engine.h  data_stream.h  ring_buffer.h  sliding_window.h
include/sensors/: battery_soc_sensor.h  imu_sensor.h  rpm_sensor.h  sensor_base.h  temperature_sensor.h
include/server/: api_server.h
scripts/: jetson_setup.sh
sql/: 000_init.sql
src/: main.cpp
src/config/: config_loader.cpp
src/control/: vehicle_controller.cpp  vehicle_profile.cpp
src/db/: pg_client.cpp
src/engine/: condition_engine.cpp  data_stream.cpp  sliding_window.cpp
src/sensors/: battery_soc_sensor.cpp  imu_sensor.cpp  rpm_sensor.cpp  temperature_sensor.cpp
src/server/: api_server.cpp
tests/: CMakeLists.txt  test_condition_engine.cpp  test_config_loader.cpp  test_ring_buffer.cpp  test_sliding_window.cpp  test_vehicle_profile.cpp
